--- a/contact.html
+++ b/contact.html
@@ -57,9 +57,9 @@
     </form> 
    </div> 
    <div class="contact-info" style="padding: 10px;"> 
-    <p>Email: fooddonate@gmail.com</p> 
-    <p>Phone: 555-555-5555</p> 
-    <p>Address: 123 Main St, Anytown</p> 
+    <p>Email: food_donate@gmail.com</p> 
+    <p>Phone: (+91)3456-321-345</p> 
+    <p>Address: XYZ street, India</p> 
    </div> 
  
 
