--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         </div>
         <nav class="nav-bar">
             <ul>
-              <li><a href="#home" class="active">Home</a></li>
+              <li><a href="index.html" class="active">Home</a></li>
               <li><a href="about.html" >About</a></li>
               <li><a href="contact.html" >Contact</a></li>
               <li><a href="loginindex.html">Sign Up</a></li>
