--- a/fooddonate.html
+++ b/fooddonate.html
@@ -68,25 +68,25 @@
         <label for="location"></label>
         <label for="district">District:</label>
 <select id="district" name="district" style="padding:10px;">
-  <option value="chennai">Chennai</option>
-  <!-- <option value="kancheepuram">Kancheepuram</option>
-  <option value="thiruvallur">Thiruvallur</option>
-  <option value="vellore">Vellore</option>
-  <option value="tiruvannamalai">Tiruvannamalai</option>
-  <option value="tiruvallur">Tiruvallur</option>
-  <option value="tiruppur">Tiruppur</option> -->
-  <option value="coimbatore">Coimbatore</option>
-  <!-- <option value="erode">Erode</option>
-  <option value="salem">Salem</option>
-  <option value="namakkal">Namakkal</option>
-  <option value="tiruchirappalli">Tiruchirappalli</option>
+  <option value="chennai">New Delhi</option>
+  <option value="kancheepuram">Hauz Khas</option>
+  <option value="thiruvallur">Kashmere Gate</option>
+  <option value="vellore">Okhla </option>
+  <option value="tiruvannamalai">Dwarka</option>
+  <option value="tiruvallur">Palam</option>
+  <option value="tiruppur">Janakpuri West</option> 
+  <option value="coimbatore">Chandnichowk</option>
+  <option value="erode">Janakpuri East</option>
+  <option value="salem">Adarsh Nagar</option>
+  <option value="namakkal">Samaypur Badli</option>
+  <!--<option value="tiruchirappalli">Tiruchirappalli</option>
   <option value="thanjavur">Thanjavur</option>
   <option value="pudukkottai">Pudukkottai</option>
   <option value="karur">Karur</option>
   <option value="ariyalur">Ariyalur</option>
-  <option value="perambalur">Perambalur</option> -->
+  <option value="perambalur">Perambalur</option> 
   <option value="madurai">Madurai</option>
-  <!-- <option value="virudhunagar">Virudhunagar</option>
+  <option value="virudhunagar">Virudhunagar</option>
   <option value="dindigul">Dindigul</option>
   <option value="ramanathapuram">Ramanathapuram</option>
   <option value="sivaganga">Sivaganga</option>
