--- a/fooddonate.html
+++ b/fooddonate.html
@@ -68,17 +68,17 @@
         <label for="location"></label>
         <label for="district">District:</label>
 <select id="district" name="district" style="padding:10px;">
-  <option value="chennai">New Delhi</option>
-  <option value="kancheepuram">Hauz Khas</option>
-  <option value="thiruvallur">Kashmere Gate</option>
-  <option value="vellore">Okhla </option>
-  <option value="tiruvannamalai">Dwarka</option>
-  <option value="tiruvallur">Palam</option>
-  <option value="tiruppur">Janakpuri West</option> 
-  <option value="coimbatore">Chandnichowk</option>
-  <option value="erode">Janakpuri East</option>
-  <option value="salem">Adarsh Nagar</option>
-  <option value="namakkal">Samaypur Badli</option>
+  <option value="New Delhi">New Delhi</option>
+  <option value="Hauz Khas">Hauz Khas</option>
+  <option value="Kashmere Gate">Kashmere Gate</option>
+  <option value="Okhla">Okhla </option>
+  <option value="Dwarka">Dwarka</option>
+  <option value="Palam">Palam</option>
+  <option value="Janakpuri West">Janakpuri West</option> 
+  <option value="Chandnichowk">Chandnichowk</option>
+  <option value="Janakpuri East">Janakpuri East</option>
+  <option value="Adarsh Nagar">Adarsh Nagar</option>
+  <option value="Samaypur Badli">Samaypur Badli</option>
   <!--<option value="tiruchirappalli">Tiruchirappalli</option>
   <option value="thanjavur">Thanjavur</option>
   <option value="pudukkottai">Pudukkottai</option>
